<resources>
    <string name="app_name">Love Generator</string>
    <string name="action_settings">Settings</string>
    <string name="star">Star</string>
    <string name="value1">Activate Love</string>
    <string name="heartpic">Heart</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General: For Special Someone</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="app_descrip">Love Generator For Tammi Tess</string>
    <string name="reset_progress_bar">Reset Progress Bar</string>
    <string name="title_activity_second">Love Trophies</string>
    <string name="main">Main</string>
    <string name="progresslove">There is no such thing as too much love!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Change Background Color</string>
    <string name="this_is_a_fragment">This is a fragment</string>
    <string name="switch_settings">Change Background Color</string>
    <string name="switch_key">switch</string>
    <string name="button">Change Color</string>
    <string name="color_picker_default_title">Color Picker</string>
    <string name="title">Select your color:</string>
    <string name="lovetotal">Love Total</string>
    <string name="lovegen">Generate more love</string>
    <string name="love_trophies">Love Trophies</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level">level</string>
    <string name="pictureskey">Picture Key</string>
</resources>
