<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hanneswidrig.testprogram.SecondActivity"
    tools:showIn="@layout/activity_second">

    <Button
        android:text="@string/lovegen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@color/deep_purple"
        android:hapticFeedbackEnabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/level_1"
        android:layout_width="match_parent"
        android:id="@+id/button3"
        android:background="@color/amber"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="185dp"
        android:visibility="invisible" />

    <Button
        android:text="@string/level_2"
        android:layout_width="match_parent"
        android:id="@+id/button4"
        android:background="@color/orange"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="185dp"
        android:visibility="invisible" />
    <Button
        android:text="@string/level_3"
        android:layout_width="match_parent"
        android:id="@+id/button5"
        android:background="@color/red"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_above="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="185dp"
        android:visibility="invisible" />
</RelativeLayout>
